k8s/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability
  namespace: default
  annotations:
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.anamnesis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: web
    - host: prometheus.anamnesis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  name: web
